--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Hair salon</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" >
+  <meta charset="UTF-8">
+  <meta name="author" content="Natasha Mykytenko">
   <link href="style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <script src="script.js"></script>
